--- a/style.css
+++ b/style.css
@@ -1,424 +1,592 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 * {
-    padding: 0%;
-    margin: 0%;
+  padding: 0%;
+  margin: 0%;
 }
 
 body {
-    font-family: Roboto, serif;
+  font-family: Roboto, serif;
 }
 
 /* Navbar section */
 .navbar {
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    margin-top: 30px;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  margin-top: 30px;
 }
 
 .navbar img {
-    width: 130px;
-    margin-right: 100px;
+  width: 130px;
+  margin-right: 100px;
+}
+
+.bars {
+  display: none;
 }
 
 .list-items {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    gap: 3rem;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  gap: 3rem;
 }
 
 .list-item:last-child {
-    padding: 10px 25px;
-    border: 2px solid #34A2F3;
-    color: #34A2F3;
-    border-radius: 5px;
+  padding: 10px 25px;
+  border: 2px solid #34a2f3;
+  color: #34a2f3;
+  border-radius: 5px;
 }
 
 /* Hosting Section */
 .hosting {
-    height: 405px;
-    padding: 60px 90px;
-    display: flex;
-    margin-top: 30px;
+  height: 405px;
+  padding: 60px 90px;
+  display: flex;
+  margin-top: 30px;
 }
 
 .hosting-content {
-    width: 40rem;
-    margin-left: 50px;
+  width: 40rem;
+  margin-left: 50px;
 }
 
 .hosting-content h1 {
-    font-size: 60px;
-    font-weight: bolder;
+  font-size: 60px;
+  font-weight: bolder;
 }
 
 .hosting-content p {
-    opacity: 0.5;
-    margin-top: 50px;
+  opacity: 0.5;
+  margin-top: 50px;
 }
 
 .hosting-content button {
-    padding: 10px 25px;
-    border: 2px solid #34A2F3;
-    color: #ffffff;
-    border-radius: 5px;
-    background-color: #34A2F3;
-    margin-top: 50px;
+  padding: 10px 25px;
+  border: 2px solid #34a2f3;
+  color: #ffffff;
+  border-radius: 5px;
+  background-color: #34a2f3;
+  margin-top: 50px;
 }
 
 .hosting-img {
-    width: 50rem;
-    height: 350px;
-    text-align: center;
+  width: 50rem;
+  height: 350px;
+  text-align: center;
 }
 
 .hosting-img img {
-    width: 600px;
-    height: 400px;
+  width: 600px;
+  height: 400px;
 }
 
 /* Quality Section */
 
 .quality {
-    height: 435px;
-    padding: 60px 90px;
-    display: flex;
-    margin-top: 30px;
+  height: 435px;
+  padding: 60px 90px;
+  display: flex;
+  margin-top: 30px;
 }
 
 .quality-img {
-    width: 50rem;
-    height: 350px;
-    text-align: center;
+  width: 50rem;
+  height: 350px;
+  text-align: center;
 }
 
 .quality-img img {
-    width: 600px;
-    height: 400px;
+  width: 600px;
+  height: 400px;
 }
 
 .quality-content {
-    width: 40rem;
-    margin-left: 50px;
+  width: 40rem;
+  margin-left: 50px;
 }
 
 .quality-content h1 {
-    font-size: 60px;
-    font-weight: bolder;
+  font-size: 60px;
+  font-weight: bolder;
 }
 
 .quality-content p {
-    opacity: 0.5;
-    margin-top: 50px;
+  opacity: 0.5;
+  margin-top: 50px;
 }
 
 .quality-content button {
-    padding: 10px 25px;
-    border: 2px solid #34A2F3;
-    color: #ffffff;
-    border-radius: 5px;
-    background-color: #34A2F3;
-    margin-top: 50px;
+  padding: 10px 25px;
+  border: 2px solid #34a2f3;
+  color: #ffffff;
+  border-radius: 5px;
+  background-color: #34a2f3;
+  margin-top: 50px;
 }
 
 /* Support Section */
 .support {
-    height: 540px;
-    padding: 60px 90px;
-    display: flex;
-    margin-top: 30px;
+  height: 540px;
+  padding: 60px 90px;
+  display: flex;
+  margin-top: 30px;
 }
 
 .support-content {
-    width: 40rem;
-    margin-left: 50px;
+  width: 40rem;
+  margin-left: 50px;
 }
 
 .support-content h1 {
-    font-size: 60px;
-    font-weight: bolder;
+  font-size: 60px;
+  font-weight: bolder;
 }
 
 .support-content p {
-    opacity: 0.5;
-    margin-top: 50px;
+  opacity: 0.5;
+  margin-top: 50px;
 }
 
 .support-content button {
-    padding: 10px 25px;
-    border: 2px solid #34A2F3;
-    color: #ffffff;
-    border-radius: 5px;
-    background-color: #34A2F3;
-    margin-top: 50px;
+  padding: 10px 25px;
+  border: 2px solid #34a2f3;
+  color: #ffffff;
+  border-radius: 5px;
+  background-color: #34a2f3;
+  margin-top: 50px;
 }
 
 .support-img {
-    width: 50rem;
-    height: 350px;
-    text-align: center;
+  width: 50rem;
+  height: 350px;
+  text-align: center;
 }
 
 .support-img img {
-    width: 600px;
-    height: 400px;
+  width: 600px;
+  height: 400px;
 }
 
 /* Service Sector */
 .service {
-    display: flex;
+  display: flex;
 }
 
 .service h1 {
-    width: 500px;
-    font-size: 53px;
-    margin-left: 150px;
+  width: 500px;
+  font-size: 53px;
+  margin-left: 150px;
 }
 
 .service p {
-    width: 500px;
-    opacity: 0.5;
-    margin-left: 170px;
-    margin-top: 20px;
+  width: 500px;
+  opacity: 0.5;
+  margin-left: 170px;
+  margin-top: 20px;
 }
 
 .services {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-    margin-left: 130px;
-    margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  margin-left: 130px;
+  margin-top: 50px;
 }
 
 .service-1 {
-    height: 15rem;
-    width: 15rem;
-
+  height: 15rem;
+  width: 15rem;
 }
 
 .service-1-img {
-    height: 50px;
-    margin-top: 15px;
-    margin-left: 20px;
+  height: 50px;
+  margin-top: 15px;
+  margin-left: 20px;
 }
 
 .service-1-heading {
-    margin-top: 15px;
-    margin-left: 20px;
+  margin-top: 15px;
+  margin-left: 20px;
 }
 
 .service-1-text {
-    opacity: 0.5;
-    margin-top: 15px;
-    margin-left: 20px;
+  opacity: 0.5;
+  margin-top: 15px;
+  margin-left: 20px;
 }
 
 /* Price Sector */
 .price {
-    background-color: #079EF3;
-    height: 800px;
+  background-color: #079ef3;
+  height: 800px;
 }
 
 .price h2 {
-    text-align: center;
-    font-size: 50px;
-    color: #ffffff;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+  text-align: center;
+  font-size: 50px;
+  color: #ffffff;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .price-row {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 60rem;
-    margin-left: 260px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 60rem;
+  margin-left: 260px;
 }
 
 .price-col {
-    background-color: #ffffff;
-    border-radius: 10px;
-    text-align: center;
-    height: 540px;
-    margin-left: 32px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  text-align: center;
+  height: 540px;
+  margin-left: 32px;
 }
 
 .price-col h3 {
-    padding: 20px 0px 0px 0px;
-    font-size: x-large;
-    text-align: start;
-    margin-left: 20px;
+  padding: 20px 0px 0px 0px;
+  font-size: x-large;
+  text-align: start;
+  margin-left: 20px;
 }
 
 .price-col h5 {
-    padding: 10px 0px 0px 0px;
-    text-align: start;
-    margin-left: 20px;
-    opacity: 0.8;
+  padding: 10px 0px 0px 0px;
+  text-align: start;
+  margin-left: 20px;
+  opacity: 0.8;
 }
 
 .price-col ul {
-    list-style: none;
-    margin-top: 50px;
+  list-style: none;
+  margin-top: 50px;
 }
 
 .price-col li {
-    padding: 10px 10px 20px 10px;
-    text-align: start;
-    margin-left: 20px;
+  padding: 10px 10px 20px 10px;
+  text-align: start;
+  margin-left: 20px;
 }
 
 .price-col li::before {
-    content: "";
-    display: inline-block;
-    height: 15px;
-    width: 15px;
-    background-image: url(assets/green-check.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-right: 15px;
+  content: "";
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  background-image: url(assets/green-check.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-right: 15px;
 }
 
 .price-col h4 {
-    font-size: x-large;
-    margin-top: 15px;
+  font-size: x-large;
+  margin-top: 15px;
 }
 
 .price-col h4 span {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 .price-col h6 {
-    margin-top: 10px;
-    opacity: 0.8;
+  margin-top: 10px;
+  opacity: 0.8;
 }
 
 .price-col button {
-    padding: 15px 30px;
-    margin-top: 20px;
-    border: 2px solid #079EF3;
-    border-radius: 8px;
-    background: transparent;
-    color: #34A2F3;
-    font-weight: 900;
+  padding: 15px 30px;
+  margin-top: 20px;
+  border: 2px solid #079ef3;
+  border-radius: 8px;
+  background: transparent;
+  color: #34a2f3;
+  font-weight: 900;
 }
 
 .customer-heading {
-    text-align: center;
-    padding: 30px;
+  text-align: center;
+  padding: 30px;
 }
 
 .customer-heading h2 {
-    font-size: 50px;
-    margin-top: 50px;
-    opacity: 0.8;
+  font-size: 50px;
+  margin-top: 50px;
+  opacity: 0.8;
 }
 
 .customer-heading p {
-    margin-top: 20px;
-    opacity: 0.5;
+  margin-top: 20px;
+  opacity: 0.5;
 }
 
 .customers {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 60rem;
-    margin-left: 300px;
-    gap: 2rem;
-    height: 500px;
-    margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-left: 260px;
+  padding-right: 260px;
+  gap: 2rem;
+  height: 500px;
+  margin-top: 20px;
 }
 
 .customer {
-    padding: 20px;
-    box-shadow: 0 0 5px 0 rgb(0 0 0 / 2);
-    border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 0 5px 0 rgb(0 0 0 / 2);
+  border-radius: 8px;
 }
 
 .customer img {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .profile {
-    display: flex;
+  display: flex;
 }
 
 .name {
-    margin-top: 30px;
-    margin-left: 10px;
+  margin-top: 30px;
+  margin-left: 10px;
 }
 
 /* registration section */
 .register {
-    display: flex;
-    background-image: url(assets/footer-bg.svg);
-    height: 320px;
-    margin-top: 80px;
-    justify-content: space-between;
-
+  display: flex;
+  background-image: url(assets/footer-bg.svg);
+  height: 320px;
+  margin-top: 80px;
+  justify-content: space-between;
 }
 
 .title {
-    padding: 50px;
-    color: #ffffff;
-    margin-left: 160px;
+  padding: 50px;
+  color: #ffffff;
+  margin-left: 160px;
 }
 
 .title h2 {
-    padding-top: 20px;
-    font-size: 40px;
-    padding-bottom: 30px;
+  padding-top: 20px;
+  font-size: 40px;
+  padding-bottom: 30px;
 }
 
 .title p {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .register button {
-    padding: 15px 30px;
-    margin-top: 20px;
-    border: 2px solid #ffffff;
-    border-radius: 8px;
-    background: transparent;
-    color: #ffffff;
-    font-weight: 900;
-    margin-right: 250px;
-    margin-top: 150px;
+  padding: 15px 30px;
+  margin-top: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 8px;
+  background: transparent;
+  color: #ffffff;
+  font-weight: 900;
+  margin-right: 250px;
+  margin-top: 150px;
 }
 
 /* Footer Section */
 
 .footer {
-    display: flex;
-    height: 220px;
-    justify-content: space-between;
-    margin-top: 100px;
-    padding: 0px 100px;
+  display: flex;
+  height: 220px;
+  justify-content: space-between;
+  margin-top: 100px;
+  padding: 0px 100px;
 }
 
 .logo img {
-    width: 100px;
-    padding-bottom: 20px;
+  width: 100px;
+  padding-bottom: 20px;
 }
 
 .footer ul {
-    list-style: none;
-    line-height: 2;
+  list-style: none;
+  line-height: 2;
 }
 
-.footer ul>li:first-child {
-    font-weight: bolder;
-    font-size: 20px;
+.footer ul > li:first-child {
+  font-weight: bolder;
+  font-size: 20px;
 }
 
 .sm-img {
-    margin-top: 20px;
-
+  margin-top: 20px;
 }
 
 .sm-img img {
-    width: 40px;
-    gap: 20px;
+  width: 40px;
+  gap: 20px;
+}
+
+/* --------------------------- */
+@media screen and (max-width: 1150px) {
+  .list-items {
+    display: none;
+  }
+
+  .bars {
+    display: block;
+  }
+
+  /* hosting */
+
+  .hosting {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 50px;
+  }
+
+  .hosting-content {
+    width: auto;
+    margin-left: 0;
+  }
+
+  .hosting-content h1 {
+    font-size: xx-large;
+  }
+
+  .hosting-img {
+    text-align: inherit;
+  }
+
+  .hosting-img img {
+    height: auto;
+    width: auto;
+  }
+
+  /* quality */
+
+  .quality {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .quality-content {
+    width: auto;
+    margin-left: 0;
+  }
+
+  .quality-content h1 {
+    font-size: xx-large;
+  }
+
+  .quality-img {
+    text-align: inherit;
+  }
+
+  .quality-img img {
+    height: auto;
+    width: auto;
+  }
+
+  /* support */
+  .support {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .support-content {
+    width: auto;
+    margin-left: 0;
+  }
+
+  .support-content h1 {
+    font-size: xx-large;
+  }
+
+  .support-img {
+    text-align: inherit;
+  }
+
+  .support-img img {
+    width: 300px;
+  }
+
+  /* .service */
+  .service {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .service h1 {
+    font-size: xx-large;
+    margin-left: 0px;
+    text-align: center;
+  }
+
+  .service p {
+    margin-left: 0px;
+    text-align: center;
+  }
+
+  .services {
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 0px;
+  }
+
+  /* .price */
+  .price {
+    height: auto;
+  }
+
+  .price h2 {
+    text-align: center;
+    font-size: xx-large;
+  }
+
+  .price-row {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 20px;
+    width: auto;
+  }
+
+  .price-col {
+    width: 285px;
+    margin-bottom: 20px;
+  }
+
+  .customers {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 230px;
+  }
+
+  .register {
+    display: none;
+  }
+
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .hosting {
+    margin-top: 150px;
+  }
+
+  .price-row {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .service p {
+    width: auto;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .hosting {
+    margin-top: 230px;
+  }
 }
